--- a/TaskManager/TaskManager/MainWindow.xaml
+++ b/TaskManager/TaskManager/MainWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:av="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="av" x:Class="TaskManager.MainWindow"
         Title="Process Manager" Height="517" Width="980"
+        Loaded="Window_Loaded"
        >
 
     <Grid>
