--- a/BookApp/BookPro/HomePage.xaml
+++ b/BookApp/BookPro/HomePage.xaml
@@ -5,7 +5,9 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:BookPro"
       mc:Ignorable="d" d:DesignWidth="800"
-      Title="HomePage" Height="325">
+      Loaded="Page_Loaded"
+
+      Title="HomePage" >
 
     <Grid>
         <Grid.RowDefinitions>
@@ -17,6 +19,7 @@
             <Button Content="导入" Click="ImportTxt_Click" HorizontalAlignment="Center"/>
             <Button Content="打开"  Click="OpenButton_Click" HorizontalAlignment="Center" Margin="10,0,10,0"/>
             <Button Content="删除"  Click="DeleteButton_Click" HorizontalAlignment="Center"/>
+            <Button Content="隐匿"  Click="YinNi_Click" Margin="10,0,10,0"/>
 
         </StackPanel>
         <ListBox x:Name="FileList" Grid.Row="1" VerticalAlignment="Stretch" Height="Auto" SelectionChanged="FileList_SelectionChanged"  >
