--- a/BookApp/BookPro/HomePage.xaml
+++ b/BookApp/BookPro/HomePage.xaml
@@ -5,8 +5,8 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:BookPro"
       mc:Ignorable="d" d:DesignWidth="800"
+      Height="100" Width="300"
       Loaded="Page_Loaded"
-
       Title="HomePage" >
 
     <Grid>
@@ -15,14 +15,14 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+        <StackPanel Orientation="Horizontal" >
             <Button Content="导入" Click="ImportTxt_Click" HorizontalAlignment="Center"/>
             <Button Content="打开"  Click="OpenButton_Click" HorizontalAlignment="Center" Margin="10,0,10,0"/>
             <Button Content="删除"  Click="DeleteButton_Click" HorizontalAlignment="Center"/>
             <Button Content="隐匿"  Click="YinNi_Click" Margin="10,0,10,0"/>
 
         </StackPanel>
-        <ListBox x:Name="FileList" Grid.Row="1" VerticalAlignment="Stretch" Height="Auto" SelectionChanged="FileList_SelectionChanged"  >
+        <ListBox x:Name="FileList" BorderBrush="Transparent" Grid.Row="1" VerticalAlignment="Stretch" Height="Auto" SelectionChanged="FileList_SelectionChanged"  >
             <!--<ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
