--- a/BookApp/BookPro/HomePage.xaml
+++ b/BookApp/BookPro/HomePage.xaml
@@ -7,6 +7,8 @@
       mc:Ignorable="d" d:DesignWidth="800"
       Height="100" Width="300"
       Loaded="Page_Loaded"
+       PreviewKeyDown="Window_KeyDown"
+       Focusable="True"
       Title="HomePage" >
 
     <Grid>
