--- a/BookApp/BookPro/MainWindow.xaml
+++ b/BookApp/BookPro/MainWindow.xaml
@@ -22,46 +22,8 @@
             <Setter Property="VerticalAlignment" Value="Top"/>
         </Style>
     </Window.Resources>
-    <Window.Template>
-        <ControlTemplate TargetType="Window">
-            <Border Background="Transparent"   BorderThickness="1">
-                <DockPanel>
-                    <Border x:Name="TitleStyle"  VerticalAlignment="Top" DockPanel.Dock="Top">
-                        <Grid>
-                            <TextBlock x:Name="title"  Background="Transparent"    Foreground="White" />
-                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right"  VerticalAlignment="Top">
-                                <Button BorderBrush="Transparent" x:Name="btnSX" Content="—" Visibility="Collapsed" 
-       Width="30" Height="30" Background="White" Foreground="Black" 
-       Click="MinimizeButton_Click"/>
-                                <Button BorderBrush="Transparent" x:Name="btnFD" Content="[ ]" Visibility="Collapsed" 
-                                    Width="30" Height="30" Background="White" Foreground="Black" 
-                                    Click="MaximizeButton_Click"/>
-
-                                <Button BorderBrush="Transparent" x:Name="btnClose" Content="X"  Visibility="Collapsed" 
-     Width="30" Height="30" Background="Transparent" Foreground="Black" 
-     Click="CloseButton_Click"/>
-                            </StackPanel>
-                        </Grid>
-                        <!--<DockPanel>
-                            <Button x:Name="btnClose" Content="X" Visibility="Hidden" DockPanel.Dock="Right" Width="30" Height="30" Background="White" Foreground="Black" Click="CloseButton_Click"/>
-                            -->
-                        <!-- 最大化按钮 -->
-                        <!--
-                            <Button x:Name="btnFD" Content="[ ]" Visibility="Hidden" DockPanel.Dock="Right" Width="30" Height="30" Background="White" Foreground="Black" Click="MaximizeButton_Click"/>
-
-                            -->
-                        <!-- 最小化按钮 -->
-                        <!--
-                            <Button x:Name="btnSX" Content="—" Visibility="Hidden" DockPanel.Dock="Right" Width="30" Height="30" Background="White" Foreground="Black" Click="MinimizeButton_Click"/>
-                            <TextBlock x:Name="title"  Background="Transparent"   MouseLeftButtonDown="TitleBar_MouseLeftButtonDown" Foreground="White" />
-                        </DockPanel>-->
-                    </Border>
-                    <ContentPresenter ContentSource="Content" />
-                </DockPanel>
-            </Border>
-        </ControlTemplate>
-    </Window.Template>
-    <Grid >
+    
+    <Grid Margin="6">
         <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden"/>
     </Grid>
 </Window>
