--- a/Notes.APP/MainWindow.xaml
+++ b/Notes.APP/MainWindow.xaml
@@ -28,36 +28,36 @@
             <DoubleAnimation Storyboard.TargetName="DrawerPanel" Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.X)"
                              From="0" To="300" Duration="0:0:0.5" AutoReverse="False"/>
         </Storyboard>
-        
+
     </Window.Resources>
     <Grid>
-    <Border BorderBrush="Transparent" BorderThickness="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <Border BorderBrush="Transparent" BorderThickness="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 
             <Grid Margin="3" MouseEnter="Grid_MouseEnter" MouseLeave="Grid_MouseLeave">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="40"></RowDefinition>
-                <RowDefinition Height="*"></RowDefinition>
-            </Grid.RowDefinitions>
-            <!-- 自定义标题栏 -->
-            <Border  BorderBrush="#bfc1be"  Grid.Row="0" Background="{Binding BackgroundColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Height="40" VerticalAlignment="Top">
-                <Border.CornerRadius>
-                    <CornerRadius TopLeft="15"    TopRight="15" BottomLeft="0" BottomRight="0"/>
-                </Border.CornerRadius>
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="50"></ColumnDefinition>
-                        <ColumnDefinition Width="*"></ColumnDefinition>
-                        <ColumnDefinition Width="100"></ColumnDefinition>
-                    </Grid.ColumnDefinitions>
-                    <!-- 左侧标题 -->
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="40"></RowDefinition>
+                    <RowDefinition Height="*"></RowDefinition>
+                </Grid.RowDefinitions>
+                <!-- 自定义标题栏 -->
+                <Border  BorderBrush="#bfc1be"  Grid.Row="0" Background="{Binding BackgroundColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Height="40" VerticalAlignment="Top">
+                    <Border.CornerRadius>
+                        <CornerRadius TopLeft="15"    TopRight="15" BottomLeft="0" BottomRight="0"/>
+                    </Border.CornerRadius>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="50"></ColumnDefinition>
+                            <ColumnDefinition Width="*"></ColumnDefinition>
+                            <ColumnDefinition Width="100"></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <!-- 左侧标题 -->
                         <TextBlock FontFamily="Segoe MDL2 Assets" Text="&#xE948;"  
            VerticalAlignment="Center" 
            Margin="10" 
            MouseLeftButtonDown="TextButton_Click"
            Foreground="{Binding Color, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
            FontSize="16"  />
-                    <!-- 右侧按钮 -->
-                    <StackPanel Grid.Column="2" Orientation="Horizontal" 
+                        <!-- 右侧按钮 -->
+                        <StackPanel Grid.Column="2" Orientation="Horizontal" 
                             HorizontalAlignment="Right" 
                             VerticalAlignment="Center" 
                             Margin="0,0,10,0">
@@ -105,55 +105,80 @@
 
 
                             </Grid>
-                           
-                    </StackPanel>
-                </Grid>
-            </Border>
 
-            <!-- 主内容 -->
-            <Border Grid.Row="1" 
+                        </StackPanel>
+                    </Grid>
+                </Border>
+
+                <!-- 主内容 -->
+                <Border Grid.Row="1" 
                     Name="pageBorder"  
                     BorderBrush="{Binding  PageBackgroundColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  
                     Background="{Binding PageBackgroundColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  >
-                <Border.CornerRadius>
-                    <CornerRadius TopLeft="0"    TopRight="0" BottomLeft="15" BottomRight="15"/>
-                </Border.CornerRadius>
-                <Grid Margin="0,0,0,0" Background="Transparent">
+                    <Border.CornerRadius>
+                        <CornerRadius TopLeft="0"    TopRight="0" BottomLeft="15" BottomRight="15"/>
+                    </Border.CornerRadius>
+                    <Grid Margin="0,0,0,20" Background="Transparent">
                         <Border CornerRadius="20" Background="Transparent" ClipToBounds="True">
                             <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden" Background="Transparent"
                        HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
                         </Border>
                     </Grid>
-            </Border>
-            <!-- 透明遮罩区域，用于关闭抽屉 -->
-            <Grid Grid.Row="1" x:Name="CloseArea" Background="Transparent" Visibility="Collapsed" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                    
+                </Border>
+                <TextBlock Grid.Row="1" Margin="10,3" Foreground="{Binding Color, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Bottom" HorizontalAlignment="Right" Text="{Binding CreateTimeStr}"></TextBlock>
+                <!-- 透明遮罩区域，用于关闭抽屉 -->
+                <Grid Grid.Row="1" x:Name="CloseArea" Background="Transparent" Visibility="Collapsed" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
               MouseLeftButtonDown="CloseArea_MouseLeftButtonDown"/>
-            <!-- 抽屉页 -->
-            <!-- 抽屉页  -->
-            <Border Grid.Row="1" Opacity="0.8" Visibility="Collapsed" x:Name="DrawerPanel" Background="#f8f8f8" BorderThickness="1" 
+                <!-- 抽屉页 -->
+                <!-- 抽屉页  -->
+                <Border Grid.Row="1" Opacity="0.8" Visibility="Collapsed" x:Name="DrawerPanel" Background="#f8f8f8" BorderThickness="1" 
                 HorizontalAlignment="Right" VerticalAlignment="Top" 
                 Width="150" Height="200">
-                <Border.CornerRadius>
-                    <CornerRadius TopLeft="5"    TopRight="0" BottomLeft="5" BottomRight="0"/>
-                </Border.CornerRadius>
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="20"></RowDefinition>
-                        <RowDefinition Height="30"></RowDefinition>
-                        <RowDefinition Height="20"></RowDefinition>
-                        <RowDefinition Height="30"></RowDefinition>
-                    </Grid.RowDefinitions>
-                    <TextBlock Grid.Row="0" Text="颜色" Foreground="#000" Margin="2"></TextBlock>
-                    <!--<xc:ColorCanvas Grid.Row="1" Margin="0,0,-85,0" Width="250"  SelectedColorChanged="ColorCanvas_SelectedColorChanged"/>-->
+                    <Border.CornerRadius>
+                        <CornerRadius TopLeft="5"    TopRight="0" BottomLeft="5" BottomRight="0"/>
+                    </Border.CornerRadius>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="20"></RowDefinition>
+                            <RowDefinition Height="30"></RowDefinition>
+                            <RowDefinition Height="20"></RowDefinition>
+                            <RowDefinition Height="30"></RowDefinition>
+                            <RowDefinition Height="*"></RowDefinition>
+                        </Grid.RowDefinitions>
+                        <TextBlock Grid.Row="0" Text="颜色" Foreground="#000" Margin="2"></TextBlock>
+                        <!--<xc:ColorCanvas Grid.Row="1" Margin="0,0,-85,0" Width="250"  SelectedColorChanged="ColorCanvas_SelectedColorChanged"/>-->
                         <xc:ColorPicker Grid.Row="1" Name="MyColorPicker" DisplayColorAndName="True"   SelectedColorChanged="ColorCanvas_SelectedColorChanged" Width="150" />
                         <TextBlock Grid.Row="2" Text="透明度" Margin="2" Foreground="#000"></TextBlock>
-                    <Slider ValueChanged="Slider_ValueChanged" Grid.Row="3"  HorizontalAlignment="Center" VerticalAlignment="Center" 
+                        <Slider ValueChanged="Slider_ValueChanged" Grid.Row="3"  HorizontalAlignment="Center" VerticalAlignment="Center" 
                         Width="130"  Minimum="0.1" Maximum="1" Value="{Binding Opacity }" />
-                </Grid>
-            </Border>
-        </Grid>
-    </Border>
-    <!-- 右下角拖拽 -->
+
+                        <ListView Grid.Row="4" VerticalAlignment="Bottom"  BorderBrush="Transparent" BorderThickness="0">
+                            <!-- 其他项 -->
+                            <ListView.Items >
+                                <StackPanel Orientation="Horizontal" Margin="0,10" MouseLeftButtonDown="StackPanel_MouseLeftButtonDown_1">
+                                    <TextBlock FontFamily="Segoe MDL2 Assets" VerticalAlignment="Center"
+                               Text="&#xE8FD;" 
+                               FontSize="16" 
+                               Margin="0,0,10,0" />
+                                    <TextBlock Text="查看列表" FontSize="14" VerticalAlignment="Center" />
+                                </StackPanel>
+
+                                <StackPanel Orientation="Horizontal" Margin="0,10" MouseLeftButtonDown="StackPanel_MouseLeftButtonDown">
+                                    <TextBlock FontFamily="Segoe MDL2 Assets" Foreground="Red" VerticalAlignment="Center"
+                               Text="&#xE74D;" 
+                               FontSize="16" 
+                               Margin="0,0,10,0" />
+                                    <TextBlock Text="删除便签" Foreground="Red" FontSize="14" VerticalAlignment="Center" />
+                                </StackPanel>
+                            </ListView.Items>
+                        </ListView>
+
+                    </Grid>
+                </Border>
+            </Grid>
+        </Border>
+        <!-- 右下角拖拽 -->
         <Thumb Name="ResizeHandle" HorizontalAlignment="Right" VerticalAlignment="Bottom"
                Width="16" Height="16" Background="Transparent" Margin="0,0,5,5"
                Cursor="SizeNWSE" DragDelta="ResizeHandle_DragDelta" >
