--- a/Notes.APP/Pages/HomePage.xaml
+++ b/Notes.APP/Pages/HomePage.xaml
@@ -16,6 +16,7 @@
                  TextWrapping="Wrap"   
                  Background="Transparent"
                  AcceptsReturn="True"
+                 TextChanged="txtConent_TextChanged"
                  VerticalScrollBarVisibility="Auto"
                  HorizontalScrollBarVisibility="Disabled"  
                  HorizontalAlignment="Stretch"
